--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,21 @@
-I started patching indent before 2.0 came out, sent my changes to the 2.0
-maintainer who neither acknowledged nor incorporated the fixes.  Post-2.0
-development of indent has not produced a version (through 2.2.7) which I find
-useful since most of the differences I see between their respective outputs are
-new bugs in the 2.x version.  And it still does not fix the bugs that I have
-noticed myself in indent.  Perhaps the next maintainer of indent will know
-something about regression testing -T.Dickey 2002/4/7
+-- $Id: ChangeLog,v 1.15 2010/10/05 08:45:44 tom Exp $
+
+2010-10-04
+	+ modifiy configure script and makefile to support --program-suffix,
+	  etc.
+
+	+ add configure check for ctags, needed for some BSD ports.
+
+	+ add configure options --disable-echo and --enable-warnings.
+
+	+ add RPM and Debian packages scripts, for testing.
+
+	+ modify makefile to work with $(DESTDIR)
+
+	+ fixup makefile template's use of autoconf variables such as prefix.
+
+	+ update configure script, using autoconf-252
+	  http://invisible-island.net/autoconf/
 
 2002-04-28
 	+ in file indent.c newline case, add check for writing a pending
