--- a/README
+++ b/README
@@ -1,3 +1,15 @@
+I started patching indent before 2.0 came out, sent my changes to the 2.0
+maintainer who neither acknowledged nor incorporated the fixes.  Post-2.0
+development of indent has not produced a version (through 2.2.7) which I find
+useful since most of the differences I see between their respective outputs are
+new bugs in the 2.x version.  And it still does not fix the bugs that I have
+noticed myself in indent.  Perhaps the next maintainer of indent will know
+something about regression testing -T.Dickey 2002/4/7
+
+The original read-me follows:
+
+-------------------------------------------------------------------------------
+
 README for GNU `indent' 2.0, November, 1998
 
   GNU indent changes the appearance of a C or C++ program by inserting
