--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20101011) unstable; urgency=low
+
+  * minor bug-fixes/portability improvements
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 11 Oct 2010 18:44:18 -0400
+
 cindent (2.0.20101009) unstable; urgency=low
 
   * Add package scripts, for test-builds.
