--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20101025) unstable; urgency=low
+
+  * improve messages for unterminated indent-off comment
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 25 Oct 2010 18:55:21 -0400
+
 cindent (2.0.20101011) unstable; urgency=low
 
   * minor bug-fixes/portability improvements
